[gd_scene load_steps=7 format=3 uid="uid://bg8fov0doo7jv"]

[ext_resource type="Script" path="res://Modules/PlayerControls/player_control.gd" id="1_yt4kj"]
[ext_resource type="PackedScene" uid="uid://g26mcahcpuby" path="res://Modules/PlayerControls/MachineInstanceButton/MachineInstanceButton.tscn" id="2_ugy8w"]
[ext_resource type="Script" path="res://Modules/PlayerControls/PowerLabel.gd" id="3_7xq80"]
[ext_resource type="PackedScene" uid="uid://dnnypwqbay5wo" path="res://Modules/Machines/GrabberMachine.tscn" id="3_aupbq"]
[ext_resource type="PackedScene" uid="uid://251lutonsb52" path="res://Modules/Machines/TreadMachine.tscn" id="4_11me8"]

[sub_resource type="LabelSettings" id="LabelSettings_7bhr5"]
font_size = 36

[node name="PlayerControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yt4kj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -76.0
grow_horizontal = 2
grow_vertical = 0

[node name="Creatures" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MachineInstanceButton" parent="VBoxContainer/Creatures" instance=ExtResource("2_ugy8w")]
layout_mode = 2

[node name="MachineInstanceButton2" parent="VBoxContainer/Creatures" instance=ExtResource("2_ugy8w")]
layout_mode = 2
text = "Machine 2"
machine = ExtResource("3_aupbq")

[node name="MachineInstanceButton3" parent="VBoxContainer/Creatures" instance=ExtResource("2_ugy8w")]
layout_mode = 2
text = "Machine 3"
machine = ExtResource("4_11me8")

[node name="Deselect" parent="VBoxContainer/Creatures" instance=ExtResource("2_ugy8w")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
disabled = true
text = "Deselct"
machine = null

[node name="PowerLabel" type="Label" parent="."]
layout_mode = 1
offset_right = 205.0
offset_bottom = 65.0
text = "Power: 0"
label_settings = SubResource("LabelSettings_7bhr5")
script = ExtResource("3_7xq80")
